Fix word highlight sync drift on long passages

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ body.bedtime .btn-rm-close { background: #252540; border-color: #3a3a5c !importa
 body.bedtime .btn-rm-listen { background: #8a6a3a; }
 
 /* ── Floating Play/Pause Button (both modes) ── */
-.float-tts-btn { position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%); z-index: 250; padding: 14px 28px; border-radius: 50px; border: none; font-family: 'Fredoka', sans-serif; font-weight: 700; font-size: 1.1rem; cursor: pointer; box-shadow: 0 4px 20px rgba(255,107,53,0.35); transition: all 0.2s; display: none; }
+.float-tts-btn { position: fixed; bottom: 70px; left: 50%; transform: translateX(-50%); z-index: 250; padding: 14px 28px; border-radius: 50px; border: none; font-family: 'Fredoka', sans-serif; font-weight: 700; font-size: 1.1rem; cursor: pointer; box-shadow: 0 4px 20px rgba(255,107,53,0.35); transition: all 0.2s; display: none; }
 .float-tts-btn:active { transform: translateX(-50%) scale(0.95); }
 .float-tts-btn.playing { background: var(--coral); color: #fff; }
 .float-tts-btn.paused { background: var(--green); color: #fff; }
@@ -926,7 +926,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD AB</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD AC</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -1834,7 +1834,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD AB</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD AC</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
